trying to get dev icons to the correct size on mobile

--- a/src/components/Intro/Skills.module.css
+++ b/src/components/Intro/Skills.module.css
@@ -11,11 +11,9 @@
 }
 
 .skill {
-    height: 100%;
-    max-height: 60px;
-    width: 100%;
-    max-width: 60px;
+    /* width: 100%; */
+    width: 60px;
     margin: 0 10px;
-    display: flex;
-    align-items: center;
+    /* display: flex;
+    align-items: center; */
 }
